# vvw-node

./: README.md  ble_setup.py  config.py  connectivity.py  main.py  mqtt_handler.py  pyproject.toml  sensors.py
src/: ble_setup.py  config.py  connectivity.py  led_status.py  main.py  mqtt_handler.py  ota.py  sensors.py
tests/: conftest.py  test_mqtt_handler.py
