[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "VVW node"
version = "0.1.0"
description = "Pico W floor heating node"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
]