[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "VVW node"
version = "0.1.0"
description = "Pico W floor heating node"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "pytest-black",
    "pytest-ruff",
    "pytest-isort",
    "pytest-mypy",
    "coverage",
    "black",
    "isort",
    "ruff",
    "mypy",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = """
    --black
    --isort
    --mypy
    --ruff
    --cov=src
    --cov-report=term-missing
"""

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src"]
# See https://docs.astral.sh/ruff/configuration/ for more

[tool.mypy]
python_version = "3.11"
files = ["src"]
ignore_missing_imports = true

[tool.black]
line-length = 88
